--- a/Resources/Public/Css/PlaceholderImages.css
+++ b/Resources/Public/Css/PlaceholderImages.css
@@ -6,6 +6,10 @@
     z-index: 0;
 }
 
+span.placeholderimage {
+    display: block;
+}
+
 .placeholderimage:after {
     content: '';
     display: block;
@@ -15,9 +19,13 @@
     top: 0;
     left: 0;
     z-index: 1;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 1;
+
 }
 
 .placeholderimage.loaded:after {
-    background-color: transparent !important;
-    transition: background-color 0.5s ease;
+    opacity: 0 ;
+    transition: opacity 0.5s ease;
 }
