feat: add delete button

--- a/Resources/Private/Templates/TriangularPlaceholderElement.html
+++ b/Resources/Private/Templates/TriangularPlaceholderElement.html
@@ -1,9 +1,17 @@
+{namespace core = TYPO3\CMS\Core\ViewHelpers}
+
 <div class="form-control-wrap">
     <div class="form-wizards-wrap">
         <div class="form-wizards-element">
             <f:if condition="{svg}">
                 <div class="form-triangular-placeholder">
                     {svg->f:format.raw()}
+                </div>
+                <div class="form-triangular-actions">
+                    <button class="btn btn-danger">
+                        <core:icon identifier="actions-delete" size="small"/>
+                        <f:translate key="LLL:EXT:bw_placeholder_images/Resources/Private/Language/locallang_db.xlf:button.delete"/>
+                    </button>
                 </div>
             </f:if>
             <div class="form-wizards-items-bottom">{fieldWizardHtml->f:format.raw()}</div>
