--- a/Resources/Private/Templates/TriangularPlaceholderElement.html
+++ b/Resources/Private/Templates/TriangularPlaceholderElement.html
@@ -8,7 +8,11 @@
                     {svg->f:format.raw()}
                 </div>
                 <div class="form-triangular-actions">
-                    <button class="btn btn-danger">
+                    <button class="btn btn-default">
+                        <core:icon identifier="actions-refresh" size="small"/>
+                        <f:translate key="LLL:EXT:bw_placeholder_images/Resources/Private/Language/locallang_db.xlf:button.refresh"/>
+                    </button>
+                    <button class="btn btn-default">
                         <core:icon identifier="actions-delete" size="small"/>
                         <f:translate key="LLL:EXT:bw_placeholder_images/Resources/Private/Language/locallang_db.xlf:button.delete"/>
                     </button>
