--- a/Resources/Public/Css/FileMetadataElements.css
+++ b/Resources/Public/Css/FileMetadataElements.css
@@ -1,11 +1,35 @@
 .form-triangular-placeholder {
     max-width: 150px;
+    display: grid;
+    align-items: center;
+    justify-items: center;
 }
 
-.form-triangular-placeholder svg {
+.form-triangular-placeholder svg, .form-triangular-placeholder span {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+
+.form-triangular-placeholder span {
+    display: none;
+}
+
+.form-triangular-placeholder > svg {
     max-width: 100%;
     height: auto;
 }
+
+.form-triangular-placeholder.is-loading span {
+    display: inline;
+}
+
+.form-triangular-placeholder.is-loading span.overlay {
+    min-height: 150px;
+    min-width: 150px;
+    display: inline-block;
+    background: rgba(0,0,0,0.5);
+}
+
 
 .form-triangular-actions {
     margin: 10px 0 0 0;
