feat: add backend controller, api endpoints for abort, delete and refresh action

--- a/Resources/Public/Css/FileMetadataElements.css
+++ b/Resources/Public/Css/FileMetadataElements.css
@@ -30,9 +30,13 @@
     background: rgba(0,0,0,0.5);
 }
 
+.form-triangular-placeholder:not(.is-loading) + div #triangular-abort {
+    display: none;
+}
+
 
 .form-triangular-actions {
-    margin: 10px 0 0 0;
+    margin: 10px 0;
     display: flex;
     gap: 10px;
 }
