--- a/Resources/Public/Css/FileMetadataElements.css
+++ b/Resources/Public/Css/FileMetadataElements.css
@@ -10,7 +10,7 @@
     grid-row: 1 / 2;
 }
 
-.form-triangular-placeholder span {
+.form-triangular-placeholder .icon {
     display: none;
 }
 
@@ -19,10 +19,12 @@
     height: auto;
 }
 
-.form-triangular-placeholder.is-loading span {
+.form-triangular-placeholder.is-loading .icon-spin,
+.form-triangular-placeholder.is-waiting .icon-actions-clock {
     display: inline;
 }
 
+.form-triangular-placeholder.is-waiting span.overlay,
 .form-triangular-placeholder.is-loading span.overlay {
     min-width: 150px;
     height: 100%;
@@ -31,7 +33,8 @@
     background: rgba(0, 0, 0, 0.5);
 }
 
-.form-triangular-placeholder:not(.is-loading) + div #triangular-abort,
+.form-triangular-placeholder.is-loading + div #triangular-refresh,
+.form-triangular-placeholder:not(.is-waiting) + div #triangular-abort,
 .form-triangular-placeholder:not(.is-downloaded) + div #triangular-delete,
 .form-triangular-placeholder.is-downloaded + div #triangular-refresh {
     display: none;
